made some changes

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 .icon-container {
-  background-color: #F8F9FA;
+  background-color: #f8f9fa;
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
-  margin: 0 auto;
-
+  height: 150px;
+  width: 150px;
+  margin: 0.5rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .icon-container i {
-  font-size: 8rem;
+  font-size: 5rem;
   color: #4d4d4d;
 }
